@startuml US4001_DM
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Meeting" {
  entity Meeting

  class Canceled
  class Time <<(V,#FF8B40) value object>> {}
  class Duration <<(V,#FF8B40) value object>> {}
}

class Canceled <<(V,#FF8B40) value object>> {
  - canceledAt
}

entity Meeting <<entity>> <<root>> {

}

package "<<aggregate>> Invite" {
  entity Invite

  class Status
}

class Status <<(V,#FF8B40) value object>> {}

note left of Status
  PENDING
  ACCEPTED
  REJECTED
end note

entity Invite <<entity>> <<root>> {

}

package "<<aggregate>> User" {
  entity User
}

entity User <<entity>> <<root>> {

}

Invite --> "1" User : invites
Invite --> "1" Meeting : is related to
Invite --> "1" Status : has

Meeting --> "1" User : scheduled by
Meeting --> "0..1" Canceled : is canceled

Meeting --> "1" Time : has
Meeting --> "1" Duration : has

@enduml
